<resources>
    <string name="material_calendar_monday">월</string>
    <string name="material_calendar_tuesday">화</string>
    <string name="material_calendar_wednesday">수</string>
    <string name="material_calendar_thursday">목</string>
    <string name="material_calendar_friday">금</string>
    <string name="material_calendar_saturday">토</string>
    <string name="material_calendar_sunday">일</string>

    <array name="material_calendar_day_abbreviations_array">
        <item>@string/material_calendar_sunday</item>
        <item>@string/material_calendar_monday</item>
        <item>@string/material_calendar_tuesday</item>
        <item>@string/material_calendar_wednesday</item>
        <item>@string/material_calendar_thursday</item>
        <item>@string/material_calendar_friday</item>
        <item>@string/material_calendar_saturday</item>
    </array>

    <array name="material_calendar_months_array">
        <item>"01"</item>
        <item>"02"</item>
        <item>"03"</item>
        <item>"04"</item>
        <item>"05"</item>
        <item>"06"</item>
        <item>"07"</item>
        <item>"08"</item>
        <item>"09"</item>
        <item>"10"</item>
        <item>"11"</item>
        <item>"12"</item>
    </array>

    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
</resources>
